[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyredis"
version = "0.1.0"
description = "A Redis-like server implementation in Python"
authors = [
    {name = "Rohan Surve", email = "rohansurve212@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["pyredis"]
